Refactor HTTPHandler and enhance styling
- Updated the HTTPHandler class to streamline request handling by consolidating methods and improving error responses.
- Introduced new methods for serving pages and static files, enhancing code clarity.
- Removed the footer layout and added a sidebar and search bar to the template structure for better navigation.
- Improved SCSS files by reorganizing imports and enhancing layout styles for a more cohesive design.

These changes improve the overall structure and usability of the application.

--- a/static/styles/layout/_header.scss
+++ b/static/styles/layout/_header.scss
@@ -1,17 +1,22 @@
 #header {
-    border-bottom-width: 1px;
-    position: sticky;
-    background: #ffffff;
-    height: 3rem;
-    width: 100%;
-    z-index: var(--z-index-sticky);
-    top: 0;
+    height: 2.5rem;
+    padding: 0.75rem 0.75rem 0.25rem;
+    display: flex;
+    align-items: center;
+    column-gap: 1rem;
 
-    .header__container {
-        height: 100%;
-        padding: 0.5rem;
-        display: flex;
-        align-items: center;
-        column-gap: 1rem;
+    & ~ #main {
+        padding-top: unset;
+    }
+
+    .header__breadcrumbs {
+        font-size: 0.938rem;
+
+        .breadcrumbs__item {
+            text-decoration: none;
+            font-weight: 300;
+            color: inherit;
+        }
+
     }
 }
