--- a/static/styles/layout/_navigation.scss
+++ b/static/styles/layout/_navigation.scss
@@ -4,80 +4,82 @@
     overflow: auto;
     width: 13.5rem;
     height: 100%;
+    display: flex;
+    flex-direction: column;
+    padding: 0.5rem 0;
 
-    .navigation__container {
+    & ~ #content {
+        border-top-left-radius: 1rem;
+        border-left-width: 1px;
+        border-top-width: 1px;
+    }
+
+    .navigation__logo {
+        margin: 0 1.25rem 1.25rem;
+        height: 29px;
+        width: fit-content;
+        display: block;
+    }
+
+    .navigation__list {
+        padding: 0 0.5rem;
+        font-size: 0.875rem;
+        font-weight: 300;
         height: 100%;
         display: flex;
         flex-direction: column;
-        padding: 1rem 0;
 
-        .container__logo {
-            margin: 0 1.25rem 1.25rem;
-            height: 29px;
-            width: fit-content;
-            display: block;
+        .list__title {
+            padding: 0.25rem 0.75rem 0.5rem;
+            color: #8f8f8f;
         }
 
-        .container__list {
-            padding: 0 0.5rem;
-            font-size: 0.875rem;
-            font-weight: 300;
-            height: 100%;
+        .list__divider {
+            width: 100%;
+
+            &--grow {
+                flex-grow: 1;
+            }
+        }
+
+        .list__link,
+        .list__button {
+            color: inherit;
+            font-size: inherit;
+            font-weight: inherit;
+            line-height: inherit;
+            padding: 0.5rem 0.75rem;
+            border-radius: 10px;
+            text-decoration: none;
+            border: none;
+            background: none;
+            width: 100%;
+            cursor: pointer;
             display: flex;
-            flex-direction: column;
+            flex-wrap: nowrap;
+            column-gap: 0.5rem;
+            align-items: center;
 
-            .list__title {
-                padding: 0.25rem 0.75rem 0.5rem;
-                color: #8f8f8f;
+            &--active,
+            &:active {
+                background: #0000000f;
             }
 
-            .list__divider {
-                width: 100%;
-
-                &--grow {
-                    flex-grow: 1;
-                }
+            &:hover {
+                background: #0000000a;
             }
 
-            .list__link,
-            .list__button {
-                color: inherit;
-                font-size: inherit;
-                font-weight: inherit;
-                line-height: inherit;
-                padding: 0.5rem 0.75rem;
-                border-radius: 10px;
-                text-decoration: none;
-                border: none;
-                background: none;
-                width: 100%;
-                cursor: pointer;
-                display: flex;
-                flex-wrap: nowrap;
-                column-gap: 0.5rem;
-                align-items: center;
+            i {
+                font-size: 1.125rem;
+                width: 20px;
+            }
 
-                &--active,
-                &:active {
-                    background: #0000000f;
-                }
-
-                &:hover {
-                    background: #0000000a;
-                }
-
-                i {
-                    font-size: 1.125rem;
-                    width: 20px;
-                }
-
-                svg {
-                    width: 20px;
-                    height: 20px;
-                    border-radius: 3px;
-                    outline: 1px solid rgba(0, 0, 0, 0.12);
-                    outline-offset: -1px;
-                }
+            svg {
+                width: 20px;
+                height: 20px;
+                border-radius: 3px;
+                outline: 1px solid rgba(0, 0, 0, 0.12);
+                outline-offset: -1px;
             }
         }
     }
