--- a/static/styles/main.scss
+++ b/static/styles/main.scss
@@ -3,15 +3,16 @@
 @import "./base/_variables";
 
 /* Components */
-@import "./components/_searchbar";
 
 /* Layout */
-@import "./layout/_footer";
 @import "./layout/_header";
+@import "./layout/_sidebar";
+@import "./layout/_searchbar";
 @import "./layout/_navigation";
 
 /* Pages */
 @import "./pages/_index";
+@import "./pages/_studio";
 
 *,:after,:before {
     box-sizing: border-box;
@@ -33,12 +34,29 @@ html {
 }
 
 body {
-    background: #ffffff;
+    display: flex;
+    flex-direction: column;
+    background: #f8f8f8;
     font-size: 16px;
     color: #0d0d0d;
-    margin: 0;
+    height: 100vh;
     width: 100%;
-    height: 100%;
+    margin: 0;
+
+    #main {
+        height: 100%;
+        display: flex;
+        flex-direction: row;
+        padding-top: 0.5rem;
+        flex-wrap: nowrap;
+    
+        #content {
+            flex-grow: 1;
+            max-height: 100%;
+            overflow: auto;
+            background: #ffffff;
+        }
+    }
 }
 
 dialog {
@@ -78,22 +96,4 @@ button, a {
 
 h1, h2, h3, h4, h5, h6 {
     margin: 0;
-}
-
-#app {
-    height: 100vh;
-    display: flex;
-    flex-direction: row;
-    flex-wrap: nowrap;
-    background: #f9f9f9;
-
-    #content {
-        flex-grow: 1;
-        max-height: 100%;
-        overflow: auto;
-        margin-top: 0.5rem;
-        border-width: 1px;
-        background: #ffffff;
-        border-top-left-radius: 1rem;
-    }
 }
