--- a/static/styles/pages/_index.scss
+++ b/static/styles/pages/_index.scss
@@ -1,4 +1,3 @@
-
 .content__index {
     padding: 2.5rem;
 
@@ -36,7 +35,7 @@
                         height: fit-content;
                         padding: 0.25rem 0.5rem;
                         margin-bottom: -2px;
-                        border-radius: 8px;
+                        border-radius: 0.5rem;
                         color: #5d5d5d;
                         border-width: 1px;
                         border-color: #e5e5e5;
@@ -78,7 +77,7 @@
 
                 .tab__item {
                     padding: 0.425rem 0.75rem;
-                    border-radius: 8px;
+                    border-radius: 0.5rem;
                     display: flex;
                     position: relative;
                     font-weight: 300;
@@ -146,10 +145,12 @@
                             height: 54px;
                             border-width: 1px;
                             border-color: #eaeaea;
+                            text-decoration: none;
+                            color: inherit;
                             font-size: 0.938rem;
                             cursor: pointer;
                             width: 100%;
-                            border-radius: 8px;
+                            border-radius: 0.5rem;
                             background: #ffffff;
                             box-shadow: 1px 2px 4px rgba(0,0,0,.03);
 
@@ -198,6 +199,9 @@
                                     text-decoration: none;
                                     font-weight: 250;
                                     color: #307ef7;
+                                    background: none;
+                                    border: none;
+                                    cursor: pointer;
 
                                     i {
                                         font-size: 0.875rem;
