--- a/static/templates/layout/header.html
+++ b/static/templates/layout/header.html
@@ -1,6 +1,8 @@
 <header id="header">
-    <div class="header__container">
-        <!-- Search -->
-        {% include "components/searchbar.html" %}
+    <img class="header__logo" src="/static/images/favicon.svg" draggable="false" width="24" height="24">
+    <div class="header__breadcrumbs">
+        <a class="breadcrumbs__item" href="/">Stratum</a>
+        <span class="breadcrumbs__separator">/</span>
+        <a class="breadcrumbs__item" href="/">{{id}}</a>
     </div>
 </header>
