--- a/static/templates/layout/header.html
+++ b/static/templates/layout/header.html
@@ -1,8 +1,8 @@
 <header id="header">
-    <img class="header__logo" src="/static/images/favicon.svg" draggable="false" width="24" height="24">
+    <img class="header__logo" src="/static/images/favicon.svg" draggable="false" width="29" height="29">
     <div class="header__breadcrumbs">
         <a class="breadcrumbs__item" href="/">Stratum</a>
-        <span class="breadcrumbs__separator">/</span>
+        <div class="breadcrumbs__separator"></div>
         <a class="breadcrumbs__item" href="/">{{id}}</a>
     </div>
 </header>
