--- a/static/styles/layout/_sidebar.scss
+++ b/static/styles/layout/_sidebar.scss
@@ -4,7 +4,7 @@
     background: #ffffff;
     border-color: #eaeaea;
     box-shadow: -2px 2px 4px rgba(0, 0, 0, 0.03);
-    border-radius: 10px;
+    border-top-left-radius: 1rem;
     border-width: 1px;
     overflow: auto;
     width: 3.75rem;
