--- a/static/templates/layout/sidebar.html
+++ b/static/templates/layout/sidebar.html
@@ -1,2 +1,14 @@
 <div id="sidebar" aria-label="Sidebar">
+    <div class="sidebar__item sidebar__item--selected">
+        <img src="/static/images/vscode.svg" width="24" height="24">
+    </div>
+    <div class="sidebar__item">
+        <img src="/static/images/jupyter.svg" width="24" height="24">
+    </div>
+    <div class="sidebar__item">
+        <img src="/static/images/tensorflow.svg" width="24" height="24">
+    </div>
+    <div class="sidebar__add">
+        <i class="fa-sharp fa-light fa-plus"></i>
+    </div>
 </div>
