Log RAW information

--- a/static/styles/layout/_header.scss
+++ b/static/styles/layout/_header.scss
@@ -25,10 +25,37 @@
         }
 
         .breadcrumbs__separator {
-            background: #8f8f8f;
             width: 1px;
             height: 12px;
+            background: #8f8f8f;
             transform: rotate(10deg);
+        }
+    }
+
+    .header__statistics {
+        display: flex;
+        margin-left: auto;
+
+        .statistics__item {
+            display: flex;
+            align-items: center;
+            column-gap: 0.5rem;
+        }
+    }
+
+    .header__settings {
+        display: flex;
+
+        .settings__item {
+            font-size: 0.938rem;
+            background: #fff;
+            box-shadow: rgba(0, 0, 0, 0.1) 0px 1px 3px 0px, rgba(0, 0, 0, 0.1) 0px 1px 2px -1px;
+            padding: 3px 13px;
+            border-radius: 8px;
+            font-weight: 300;
+            display: flex;
+            align-items: center;
+            column-gap: 0.5rem;
         }
     }
 }
