--- a/static/styles/layout/_searchbar.scss
+++ b/static/styles/layout/_searchbar.scss
@@ -3,6 +3,7 @@
     position: sticky;
     height: 3rem;
     width: 100%;
+    background: #ffffff;
     z-index: var(--z-index-sticky);
     top: 0;
 
