--- a/static/templates/layout/header.html
+++ b/static/templates/layout/header.html
@@ -5,4 +5,15 @@
         <div class="breadcrumbs__separator"></div>
         <a class="breadcrumbs__item" href="/">{{id}}</a>
     </div>
+    <div class="header__statistics">
+        <div class="statistics__item">10% cpu</div>
+    </div>
+    <div class="header__settings">
+        <div class="settings__item">
+            CPU
+            <i class="fa-kit fa-cpu"></i>
+            
+
+        </div>
+    </div>
 </header>
