Fix makefile for static files

--- a/static/styles/layout/_header.scss
+++ b/static/styles/layout/_header.scss
@@ -32,30 +32,20 @@
         }
     }
 
-    .header__statistics {
-        display: flex;
-        margin-left: auto;
-
-        .statistics__item {
-            display: flex;
-            align-items: center;
-            column-gap: 0.5rem;
-        }
-    }
-
     .header__settings {
         display: flex;
+        margin-left: auto;
+        column-gap: 0.5rem;
 
         .settings__item {
-            font-size: 0.938rem;
-            background: #fff;
-            box-shadow: rgba(0, 0, 0, 0.1) 0px 1px 3px 0px, rgba(0, 0, 0, 0.1) 0px 1px 2px -1px;
-            padding: 3px 13px;
+            font-size: 0.813rem;
+            background: #0000000f;
+            padding: 4.5px 12px;
             border-radius: 8px;
             font-weight: 300;
             display: flex;
             align-items: center;
-            column-gap: 0.5rem;
+            column-gap: 0.25rem;
         }
     }
 }
