--- a/static/templates/layout/header.html
+++ b/static/templates/layout/header.html
@@ -5,15 +5,12 @@
         <div class="breadcrumbs__separator"></div>
         <a class="breadcrumbs__item" href="/">{{id}}</a>
     </div>
-    <div class="header__statistics">
-        <div class="statistics__item">10% cpu</div>
-    </div>
     <div class="header__settings">
         <div class="settings__item">
-            CPU
-            <i class="fa-kit fa-cpu"></i>
-            
-
+            CPU<i class="fa-kit fa-cpu"></i>11 Cores
+        </div>
+        <div class="settings__item">
+            GPU<i class="fa-kit fa-nvidia" style="color: #22c55e;font-size: 0.625rem;margin-right: 2px;"></i>RTX A4000
         </div>
     </div>
 </header>
