--- a/static/templates/pages/studio.html
+++ b/static/templates/pages/studio.html
@@ -20,6 +20,7 @@
             if (!studio.success) {
                 throw new Error(studio.error);
             }
+            window.studio = studio;
             return studio;
         });
 </script>
@@ -38,9 +39,7 @@
                 document.getElementById('iframe').src = 
                     `http://${window.location.hostname}:${studio.containers[0].proxy['8080']}`;
             })
-            .catch(error => {
-                console.error('Failed to load studio:', error);
-            });
+            .catch(console.error);
     });
 </script>
 {% endblock %}
