--- a/static/templates/pages/index.html
+++ b/static/templates/pages/index.html
@@ -16,17 +16,7 @@ Clearly
 <div class="content__index">
     <div class="index__header">
         <div class="header__container">
-            <svg class="header__image" draggable="false">
-                <use xlink:href="/static/images/sprite.svg#shape-1"></use>
-            </svg>
-            <div class="header__content">
-                <h1 class="content__title">
-                    Stratum
-                </h1>
-                <div class="content__description">
-                    Machine learning / AI / Data processing / Change in Settings
-                </div>
-            </div>
+            <h1 class="header__title">Dashboard</h1>
         </div>
     </div>
     <div class="index__tabs">
