--- a/static/styles/pages/_index.scss
+++ b/static/styles/pages/_index.scss
@@ -1,37 +1,18 @@
 .content__index {
-    padding: 2.5rem;
+    padding: 1.75rem 2.25rem;
 
     .index__header {
         margin-right: auto;
         margin-left: auto;
         max-width: 99rem;
-        margin-bottom: 1.5rem;
+        margin-bottom: 1rem;
 
-        .header__container {
-            display: flex;
-            column-gap: 1rem;
-
-            .header__image {
-                width: 59px;
-                height: 59px;
-                border-radius: 1rem;
-                outline: 1px solid rgba(0, 0, 0, 0.12);
-                outline-offset: -1px;
-            }
-
-            .header__content {
-                .content__title {
-                    font-weight: 250;
-                    line-height: 1;
-                    margin-bottom: 10px;
-                }
-
-                .content__description {
-                    font-weight: 150;
-                    line-height: 1;
-                    color: #8f8f8f;
-                }
-            }
+        .header__title {
+            font-weight: 350;
+            line-height: 1;
+            color: #575b5f;
+            font-size: 1.5rem;
+            margin: 0;
         }
     }
 
@@ -62,8 +43,9 @@
                     padding: 0.425rem 0.75rem;
                     border-radius: 10px;
                     display: flex;
+                    color: #657380;
                     position: relative;
-                    font-weight: 300;
+                    font-weight: 350;
                     cursor: pointer;
 
                     &:active {
@@ -87,6 +69,8 @@
                     }
 
                     &--active {
+                        color: unset;
+
                         &:after {
                             background: currentColor;
                         }
