--- a/static/styles/pages/_index.scss
+++ b/static/styles/pages/_index.scss
@@ -93,9 +93,10 @@
 
                 .content__panel {
                     .panel__title {
-                        font-size: 0.875rem;
-                        font-weight: 300;
-                        margin-bottom: 0.75rem;
+                        padding: 0.75rem 0;
+                        font-weight: 400;
+                        font-size: 0.9rem;
+                        color: #727676;
                     }
 
                     .panel__list {
