--- a/static/styles/layout/_navigation.scss
+++ b/static/styles/layout/_navigation.scss
@@ -6,7 +6,7 @@
     height: 100%;
     display: flex;
     flex-direction: column;
-    background: #f0f4f8;
+    background: #f3f7fb;
     padding: 1.5rem 0;
 
     .navigation__logo {
@@ -60,13 +60,13 @@
 
             &--active,
             &:active {
-                background: #d3e3fd;
-                color: #0842a0;
+                background: #d5e5fb;
+                color: #055cdd;
                 font-weight: 400;
             }
 
             &:hover {
-                background: #e4e8ec;
+                background: #818b981a;
             }
 
             &:not(:last-child) {
