Refactor navigation styles and update HTML to include new link with blue and bold styles

--- a/static/styles/layout/_navigation.scss
+++ b/static/styles/layout/_navigation.scss
@@ -58,6 +58,14 @@
             column-gap: 0.5rem;
             align-items: center;
 
+            &--blue {
+                color: #0167ff;
+            }
+
+            &--bold {
+                font-weight: 400;
+            }
+
             &--active,
             &:active {
                 background: #d5e5fb;
@@ -65,7 +73,7 @@
                 font-weight: 400;
             }
 
-            &:hover {
+            &:hover:not(.list__link--active) {
                 background: #818b981a;
             }
 
