--- a/static/templates/layout/navigation.html
+++ b/static/templates/layout/navigation.html
@@ -34,5 +34,8 @@
         <a class="list__link" href="/documentation">
             <i style="font-size: 0.938rem;" class="fa-kit fa-book"></i> Product Docs
         </a>
+        <a class="list__link list__link--bold list__link--blue" href="/status">
+            <i style="font-size: 0.5rem;" class="fa-kit fa-status"></i> Operational
+        </a>
     </ul>
 </nav>
