--- a/static/templates/layout/navigation.html
+++ b/static/templates/layout/navigation.html
@@ -35,7 +35,7 @@
             <i style="font-size: 0.938rem;" class="fa-kit fa-book"></i> Product Docs
         </a>
         <a class="list__link list__link--bold list__link--blue" href="/status">
-            <i style="font-size: 0.5rem;" class="fa-kit fa-status"></i> Operational
+            <i style="font-size: 0.938rem;" class="fa-kit fa-healthy"></i> System Operational
         </a>
     </ul>
 </nav>
