--- a/doc/_ext/sphinx_core/styles/components/_code.scss
+++ b/doc/_ext/sphinx_core/styles/components/_code.scss
@@ -22,7 +22,7 @@
     margin-top: 1.5rem;
     max-width: none;
     border-radius: 0.5rem;
-    border: 1px solid hsl(var(--border));
+    border: 1px solid var(--border);
     padding-left: 0;
     padding-right: 0;
 }
@@ -36,21 +36,21 @@
 .literal-block-wrapper .code-block-caption {
     border-top-left-radius: 0.5rem;
     border-top-right-radius: 0.5rem;
-    border-bottom: 1px solid hsl(var(--border));
+    border-bottom: 1px solid var(--border);
     padding-left: 1rem;
     padding-right: 1rem;
     padding-top: 0.5rem;
     padding-bottom: 0.5rem;
     font-size: 0.875rem;
     letter-spacing: 0.05em;
-    color: hsl(var(--muted-foreground));
+    color: var(--muted-foreground);
 }
 
 code {
     position: relative;
     white-space: nowrap;
     border-radius: 0.25rem;
-    background-color: hsl(var(--muted));
+    background-color: var(--muted);
     padding-left: 0.3em;
     padding-right: 0.3em;
     padding-top: 0.2em;
@@ -65,7 +65,7 @@ code em,
 code .ge {
     font-weight: 700;
     letter-spacing: 0.05em;
-    color: hsl(var(--accent-foreground));
+    color: var(--accent-foreground);
 }
 
 :where(h1, h2, h3, h4, h5, h6) code {
@@ -76,7 +76,7 @@ pre {
     margin-top: 1.5rem;
     overflow-x: auto;
     border-radius: 0.5rem;
-    border: 1px solid hsl(var(--border));
+    border: 1px solid var(--border);
     padding-top: 1rem;
     padding-bottom: 1rem;
     font-size: 0.875rem;
@@ -123,14 +123,14 @@ pre code [id^="line-"] del {
 }
 
 pre code [id^="line-"] mark {
-    background-color: hsl(var(--muted));
+    background-color: var(--muted);
     color: inherit;
     box-shadow: 2px 0 currentColor inset;
 }
 
 pre code [id^="line-"] ins {
     background-color: rgba(34, 197, 94, 0.3);
-    color: rgb(22 101 52);
+    color: rgb(22, 101, 52);
     text-decoration: none;
 }
 
@@ -142,7 +142,7 @@ pre code [id^="line-"] ins::before {
 
 pre code [id^="line-"] del {
     background-color: rgba(239, 68, 68, 0.3);
-    color: rgb(153 27 27);
+    color: rgb(153, 27, 27);
     text-decoration: none;
 }
 
@@ -165,7 +165,7 @@ pre span.linenos {
     background-color: rgba(34, 197, 94, 0.3);
     padding-left: 1rem;
     padding-right: 1rem;
-    color: rgb(22 101 52);
+    color: rgb(22, 101, 52);
 }
 
 .highlight-diff .gd {
@@ -174,25 +174,25 @@ pre span.linenos {
     background-color: rgba(239, 68, 68, 0.3);
     padding-left: 1rem;
     padding-right: 1rem;
-    color: rgb(153 27 27);
+    color: rgb(153, 27, 27);
 }
 
 .guilabel,
 .menuselection {
     border-radius: 0.125rem;
-    border: 1px solid hsl(var(--border));
+    border: 1px solid var(--border);
     padding-left: 0.5rem;
     padding-right: 0.5rem;
     padding-top: 0.125rem;
     padding-bottom: 0.125rem;
     font-weight: 500;
-    color: hsl(var(--accent-foreground));
+    color: var(--accent-foreground);
 }
 
 #content kbd:not(.compound) {
     border-radius: 0.25rem;
     border: 1px solid;
-    background-color: hsl(var(--muted));
+    background-color: var(--muted);
     padding-left: 0.25rem;
     padding-right: 0.25rem;
     padding-top: 0.125rem;
@@ -204,7 +204,7 @@ pre span.linenos {
 
 .sig {
     scroll-margin-top: 5rem;
-    border-top: 1px solid hsl(var(--border));
+    border-top: 1px solid var(--border);
     padding-top: 1.5rem;
     font-family:
         ui-monospace, SFMono-Regular, "SF Mono", Consolas, "Liberation Mono", Menlo,
@@ -213,11 +213,11 @@ pre span.linenos {
 }
 
 .sig-name {
-    color: hsl(var(--accent-foreground));
+    color: var(--accent-foreground);
 }
 
 em.property {
-    color: hsl(var(--muted-foreground));
+    color: var(--muted-foreground);
 }
 
 .option .sig-prename {
@@ -226,7 +226,7 @@ em.property {
 
 .viewcode-link {
     float: right;
-    color: hsl(var(--muted-foreground));
+    color: var(--muted-foreground);
 }
 
 .option-list kbd {
