--- a/doc/_ext/sphinx_core/styles/base/_variables.scss
+++ b/doc/_ext/sphinx_core/styles/base/_variables.scss
@@ -22,4 +22,13 @@
     --ring: hsl(215 20.2% 65.1%);
   
     --radius: hsl(0.5rem);
-  }
+
+    // Z-index variables
+    --z-index-default: 1;
+    --z-index-tooltip: 1000;
+    --z-index-sticky: 2000;
+    --z-index-modal: 3000;
+    --z-index-dropdown: 4000;
+    --z-index-hitbox: 5000;
+    --z-index-topmost: 6000;
+}
